# mipt

./: bulls  bulls.cpp
S_carpet/: CMakeLists.txt  SierpinskyWidget.h  main.cpp
radians/: CMakeLists.txt  degrees.h  main.cpp  radians.cpp  radians.h  zachet  zachet.cpp  zachet_practise  zachet_practise.cpp
snake/: CMakeLists.txt  main.cpp  snake  snake.cpp  snakeBack.cpp  snakeBack.h  snakeGraph.cpp  snakeGraph.h  snakeQT  snakeQT.cpp  unlock  unlock.cpp
snake/Test/: CMakeCache.txt  CMakeLists.txt  Makefile  SnakeFLTK  cmake_install.cmake  snakeBack.cpp  snakeBack.h  test_snakeBack.cpp
